--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,9 +5,9 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("../img/yo.jpg");
+  background-repeat: repeat;
+  background-size: auto;
   background-position: left;
 }
 
